update and implementation of new feature

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,6 @@ org.gradle.jvmargs=-Xmx4g -Dfile.encoding=UTF-8
 android.useAndroidX=true
 android.enableJetifier=true
 android.suppressUnsupportedCompileSdk=34
+
+MYAPP_UPLOAD_STORE_FILE=../my-release-key.jks
+MYAPP_UPLOAD_KEY_ALIAS=gogoal
