--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "com.example.nodeapp"
         minSdk 24
         targetSdk 34
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "0.1.1"
 
         ndk {
             abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
@@ -24,6 +24,24 @@ android {
         targetCompatibility JavaVersion.VERSION_17
     }
 
+    signingConfigs {
+        release {
+            storeFile file(MYAPP_UPLOAD_STORE_FILE)
+            keyAlias MYAPP_UPLOAD_KEY_ALIAS
+
+            // Prompt for passwords when building
+            keyPassword MYAPP_UPLOAD_KEY_PASSWORD
+            storePassword MYAPP_UPLOAD_STORE_PASSWORD
+        }
+    }
+    buildTypes {
+        release {
+            minifyEnabled false
+            shrinkResources false
+            signingConfig signingConfigs.release
+        }
+    }
+
     buildFeatures {
         buildConfig true
     }
@@ -34,4 +52,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.12.0'
     implementation "com.squareup.okhttp3:okhttp:4.11.0"
     implementation "com.google.code.gson:gson:2.10.1"
+    implementation 'com.squareup.picasso:picasso:2.8'
+    implementation 'androidx.recyclerview:recyclerview:1.3.1'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.4.6'
 }
